--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Kivy APK
+name: Build Kivy APK with NFC Support
 
 on:
   workflow_dispatch:
@@ -6,32 +6,47 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Clone the repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install system dependencies
         run: |
           sudo apt update
           sudo apt install -y python3-pip zip unzip openjdk-17-jdk git build-essential curl
+
+      - name: Install Python packages
+        run: |
           pip install --upgrade pip
           pip install buildozer cython
 
-      - name: Accept SDK Licenses
+      - name: Setup Android SDK, Build Tools and accept licenses
         run: |
-            yes | $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
-
+          export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
+          mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+          if [ ! -d "$ANDROID_SDK_ROOT/cmdline-tools/latest" ]; then
+            cd $ANDROID_SDK_ROOT/cmdline-tools
+            curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+            unzip commandlinetools.zip
+            mkdir latest
+            mv cmdline-tools latest/
+            rm commandlinetools.zip
+          fi
+          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
+          yes | sdkmanager --install "platform-tools" "build-tools;36.0.0" "platforms;android-36"
+          yes | sdkmanager --licenses
 
       - name: Build APK
         run: |
           buildozer android debug
 
-      - name: Upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: tc-nfc-manager-apk
