--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,27 @@ jobs:
           pip install --upgrade pip
           pip install buildozer cython
 
+      - name: Install Android SDK Build Tools & Accept Licenses
+        run: |
+          export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
+          export CMDLINE_TOOLS_DIR=$ANDROID_SDK_ROOT/cmdline-tools/latest
+
+          mkdir -p $CMDLINE_TOOLS_DIR
+          cd $ANDROID_SDK_ROOT/cmdline-tools
+
+          curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip -q commandlinetools.zip -d tmp
+          mv tmp/cmdline-tools/* latest/
+          rm -rf tmp commandlinetools.zip
+
+          export PATH=$CMDLINE_TOOLS_DIR/bin:$PATH
+
+          yes | sdkmanager --sdk_root=${ANDROID_SDK_ROOT} --licenses
+          yes | sdkmanager --sdk_root=${ANDROID_SDK_ROOT} \
+            "build-tools;36.0.0" \
+            "platforms;android-36" \
+            "platform-tools"
+
       - name: Setup Android SDK, Build Tools and accept licenses
         run: |
           export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
