--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,5 +35,7 @@ jobs:
 
       - name: Build APK
         run: |
+          mkdir -p ~/.android && touch ~/.android/repositories.cfg
+          yes | sudo sdkmanager "build-tools;36.0.0" --licenses
           yes | sdkmanager --licenses
           buildozer android debug
