--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,11 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt update
+        sudo apt install -y git zip unzip openjdk-17-jdk python3-pip python3-setuptools libffi-dev libssl-dev build-essential libncurses6 libncurses-dev libsqlite3-dev zlib1g-dev
+
+    - name: Install system dependencies
+      run: |
+        sudo apt update
         sudo apt install -y git zip unzip openjdk-17-jdk python3-pip python3-setuptools libffi-dev libssl-dev build-essential libncurses5 libncurses5-dev libsqlite3-dev zlib1g-dev
 
     - name: Install buildozer
