--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,12 +51,29 @@ jobs:
         echo "PATH=$HOME/Android/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
         echo "PATH=$HOME/Android/platform-tools:$PATH" >> $GITHUB_ENV
 
-    - name: Install SDK packages
-      run: |
-        yes | sdkmanager --licenses
-        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2" "ndk;25.2.9519653"
-      env:
-        ANDROID_HOME: ${{ env.HOME }}/Android
+     - name: Download and install Android SDK command line tools
+        run: |
+          mkdir -p $HOME/Android/cmdline-tools
+          cd $HOME/Android/cmdline-tools
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+          unzip cmdline-tools.zip
+          rm cmdline-tools.zip
+          mkdir -p latest
+          mv cmdline-tools latest/
+
+- name: Add Android SDK tools to PATH
+  run: |
+    echo "$HOME/Android/cmdline-tools/latest/bin" >> $GITHUB_PATH
+    echo "$HOME/Android/platform-tools" >> $GITHUB_PATH
+
+- name: Accept SDK licenses and install SDK packages
+  run: |
+    yes | sdkmanager --licenses
+    sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+
+   
+     env:
+       ANDROID_HOME: ${{ env.HOME }}/Android
         PATH: ${{ env.HOME }}/Android/cmdline-tools/latest/bin:${{ env.PATH }}
 
     - name: Install Python dependencies
