--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Android APK
+name: Android Build
 
 on:
   push:
@@ -10,76 +10,49 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v3
+    env:
+      ANDROID_HOME: ${{ github.workspace }}/android-sdk
+      PATH: ${{ github.workspace }}/android-sdk/cmdline-tools/latest/bin:${{ github.workspace }}/android-sdk/platform-tools:${{ env.PATH }}
 
-    - name: Set up Python
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        python-version: 3.11
 
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y \
-          openjdk-17-jdk \
-          git \
-          unzip \
-          zip \
-          libncurses6 \
-          libncurses-dev \
-          libsqlite3-dev \
-          libssl-dev \
-          build-essential \
-          libffi-dev \
-          zlib1g-dev
+        sudo apt-get install -y zip unzip openjdk-17-jdk libncurses6 libstdc++6 libffi-dev libssl-dev
 
-    - name: Install Android SDK Command line tools
+    - name: Install Android SDK command line tools
       run: |
-        mkdir -p $HOME/Android/cmdline-tools
-        cd $HOME/Android/cmdline-tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O tools.zip
-        unzip tools.zip
-        rm tools.zip
-        mv cmdline-tools latest
-      env:
-        ANDROID_HOME: ${{ env.HOME }}/Android
+        mkdir -p $ANDROID_HOME/cmdline-tools
+        cd $ANDROID_HOME/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip
+        rm cmdline-tools.zip
+        mkdir -p latest
+        mv cmdline-tools latest/
 
-    - name: Set ANDROID environment variables
+    - name: Update PATH
       run: |
-        echo "ANDROID_HOME=$HOME/Android" >> $GITHUB_ENV
-        echo "PATH=$HOME/Android/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
-        echo "PATH=$HOME/Android/platform-tools:$PATH" >> $GITHUB_ENV
+        echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
+        echo "$ANDROID_HOME/platform-tools" >> $GITHUB_PATH
 
-     - name: Download and install Android SDK command line tools
-        run: |
-          mkdir -p $HOME/Android/cmdline-tools
-          cd $HOME/Android/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip
-          rm cmdline-tools.zip
-          mkdir -p latest
-          mv cmdline-tools latest/
-
-- name: Add Android SDK tools to PATH
-  run: |
-    echo "$HOME/Android/cmdline-tools/latest/bin" >> $GITHUB_PATH
-    echo "$HOME/Android/platform-tools" >> $GITHUB_PATH
-
-- name: Accept SDK licenses and install SDK packages
-  run: |
-    yes | sdkmanager --licenses
-    sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
-
-   
-     env:
-       ANDROID_HOME: ${{ env.HOME }}/Android
-        PATH: ${{ env.HOME }}/Android/cmdline-tools/latest/bin:${{ env.PATH }}
-
-    - name: Install Python dependencies
+    - name: Accept licenses and install SDK packages
       run: |
-        python3 -m pip install --upgrade pip
-        pip install buildozer
+        yes | sdkmanager --licenses
+        sdkmanager --update
+        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+
+    - name: Install Buildozer and dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install buildozer cython
 
     - name: Build APK with Buildozer
       run: |
