--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,10 +42,25 @@ jobs:
         echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
         echo "$ANDROID_HOME/platform-tools" >> $GITHUB_PATH
 
+    - name: Download and setup Android SDK command line tools
+      run: |
+        mkdir -p $ANDROID_HOME/cmdline-tools
+        cd $ANDROID_HOME/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip
+        rm cmdline-tools.zip
+        mkdir -p latest
+        mv cmdline-tools latest/
+    
+    - name: Add sdkmanager to PATH
+      run: echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
+
     - name: Accept licenses and install SDK packages
       run: |
+        yes | sdkmanager --licenses
         sdkmanager --update
         sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+
 
     - name: Install Buildozer and dependencies
       run: |
