--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,8 +34,9 @@ jobs:
         wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
         unzip cmdline-tools.zip
         rm cmdline-tools.zip
+        rm -rf latest/cmdline-tools
         mkdir -p latest
-        mv cmdline-tools latest/
+        mv cmdline-tools latest/cmdline-tools
 
     - name: Update PATH
       run: |
