--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,70 +4,50 @@ on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     env:
-      ANDROID_HOME: ${{ github.workspace }}/android-sdk
+      ANDROID_HOME: ${{ runner.temp }}/android-sdk
+      PATH: ${{ runner.temp }}/android-sdk/cmdline-tools/latest/bin:${{ runner.temp }}/android-sdk/platform-tools:${{ env.PATH }}
 
     steps:
-    - name: Checkout code
+    - name: Checkout repo
       uses: actions/checkout@v3
-
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
 
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y zip unzip openjdk-17-jdk libncurses6 libstdc++6 libffi-dev libssl-dev
+        sudo apt-get install -y openjdk-11-jdk unzip wget
 
-    - name: Install Android SDK command line tools
+    - name: Download and install Android cmdline-tools
       run: |
         mkdir -p $ANDROID_HOME/cmdline-tools
         cd $ANDROID_HOME/cmdline-tools
         wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip
+        unzip -q cmdline-tools.zip
         rm cmdline-tools.zip
-        rm -rf latest/cmdline-tools
-        mkdir -p latest
-        mv cmdline-tools latest/cmdline-tools
+        # Remove old cmdline-tools if exists
+        rm -rf $ANDROID_HOME/cmdline-tools/latest/cmdline-tools
+        # Move extracted folder to latest/cmdline-tools
+        mkdir -p $ANDROID_HOME/cmdline-tools/latest
+        mv $ANDROID_HOME/cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/latest/cmdline-tools
 
-    - name: Update PATH
+    - name: Update sdkmanager and accept licenses
       run: |
-        echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
-        echo "$ANDROID_HOME/platform-tools" >> $GITHUB_PATH
+        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME --update
+        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME --licenses
 
-    - name: Download and setup Android SDK command line tools
+    - name: Install required SDK packages
       run: |
-        mkdir -p $ANDROID_HOME/cmdline-tools
-        cd $ANDROID_HOME/cmdline-tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip
-        rm cmdline-tools.zip
-        mkdir -p latest
-        mv cmdline-tools latest/
-    
-    - name: Add sdkmanager to PATH
-      run: echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME "platform-tools" "platforms;android-33" "build-tools;33.0.2"
 
-    - name: Accept licenses and install SDK packages
+    - name: Show sdkmanager versions installed
       run: |
-        yes | sdkmanager --licenses
-        sdkmanager --update
-        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --list
 
-
-    - name: Install Buildozer and dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install buildozer cython
-
-    - name: Build APK with Buildozer
+    - name: Run Buildozer
       run: |
         buildozer android debug
