--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      ANDROID_HOME: ${{ runner.temp }}/android-sdk
-      PATH: ${{ runner.temp }}/android-sdk/cmdline-tools/latest/bin:${{ runner.temp }}/android-sdk/platform-tools:${{ env.PATH }}
+      ANDROID_HOME: /tmp/android-sdk
+      PATH: /tmp/android-sdk/cmdline-tools/latest/bin:/tmp/android-sdk/platform-tools:${{ env.PATH }}
 
     steps:
     - name: Checkout repo
@@ -29,9 +29,7 @@ jobs:
         wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
         unzip -q cmdline-tools.zip
         rm cmdline-tools.zip
-        # Remove old cmdline-tools if exists
         rm -rf $ANDROID_HOME/cmdline-tools/latest/cmdline-tools
-        # Move extracted folder to latest/cmdline-tools
         mkdir -p $ANDROID_HOME/cmdline-tools/latest
         mv $ANDROID_HOME/cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/latest/cmdline-tools
 
