--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Android Build
+name: Build Android APK
 
 on:
   push:
@@ -11,16 +11,16 @@ jobs:
 
     env:
       ANDROID_HOME: /tmp/android-sdk
-      PATH: /tmp/android-sdk/cmdline-tools/latest/bin:/tmp/android-sdk/platform-tools:${{ env.PATH }}
 
     steps:
-    - name: Checkout repo
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y openjdk-11-jdk unzip wget
+        sudo apt-get install -y openjdk-11-jdk unzip wget python3-pip python3-setuptools
+        pip3 install --upgrade buildozer
 
     - name: Download and install Android cmdline-tools
       run: |
@@ -29,23 +29,27 @@ jobs:
         wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
         unzip -q cmdline-tools.zip
         rm cmdline-tools.zip
-        rm -rf $ANDROID_HOME/cmdline-tools/latest/cmdline-tools
+        # Move and fix directory structure
+        rm -rf $ANDROID_HOME/cmdline-tools/latest
         mkdir -p $ANDROID_HOME/cmdline-tools/latest
         mv $ANDROID_HOME/cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/latest/cmdline-tools
+      shell: bash
 
-    - name: Update sdkmanager and accept licenses
+    - name: Accept Android SDK licenses and update SDK
       run: |
-        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME --update
-        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME --licenses
+        yes | $ANDROID_HOME/cmdline-tools/latest/cmdline-tools/bin/sdkmanager --sdk_root=$ANDROID_HOME --licenses
+        $ANDROID_HOME/cmdline-tools/latest/cmdline-tools/bin/sdkmanager --sdk_root=$ANDROID_HOME --update
+      env:
+        PATH: ${{ env.ANDROID_HOME }}/cmdline-tools/latest/cmdline-tools/bin:$ANDROID_HOME/platform-tools:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
-    - name: Install required SDK packages
+    - name: Install SDK packages needed for build
       run: |
-        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+        $ANDROID_HOME/cmdline-tools/latest/cmdline-tools/bin/sdkmanager --sdk_root=$ANDROID_HOME "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+      env:
+        PATH: ${{ env.ANDROID_HOME }}/cmdline-tools/latest/cmdline-tools/bin:$ANDROID_HOME/platform-tools:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
-    - name: Show sdkmanager versions installed
-      run: |
-        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --list
-
-    - name: Run Buildozer
+    - name: Run Buildozer to build APK
       run: |
         buildozer android debug
+      env:
+        PATH: /usr/local/bin:$PATH
