--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,8 +48,11 @@ jobs:
       env:
         PATH: ${{ env.ANDROID_HOME }}/cmdline-tools/latest/cmdline-tools/bin:$ANDROID_HOME/platform-tools:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
-    - name: Install git
-      run: sudo apt-get update && sudo apt-get install -y git
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y git python3-pip openjdk-11-jdk unzip
+          
 
     - name: Install Buildozer
       run: |
