--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,6 @@ jobs:
 
     env:
       ANDROID_HOME: /tmp/android-sdk
-      PATH: /tmp/android-sdk/cmdline-tools/latest/bin:/tmp/android-sdk/platform-tools:~/.local/bin:${{ env.PATH }}
 
     steps:
       - name: Checkout repository
@@ -23,8 +22,7 @@ jobs:
           sudo apt-get install -y openjdk-11-jdk unzip wget python3-pip python3-setuptools git
 
       - name: Install Buildozer
-        run: |
-          python3 -m pip install --user --upgrade buildozer
+        run: python3 -m pip install --user --upgrade buildozer
 
       - name: Download and install Android cmdline-tools
         run: |
@@ -33,20 +31,25 @@ jobs:
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
           unzip -q cmdline-tools.zip
           rm cmdline-tools.zip
-          # The zip creates a cmdline-tools folder, move it to latest/
           rm -rf $ANDROID_HOME/cmdline-tools/latest
           mv cmdline-tools $ANDROID_HOME/cmdline-tools/latest
         shell: bash
 
       - name: Accept Android SDK licenses and update SDK
+        env:
+          PATH: ${{ env.ANDROID_HOME }}/cmdline-tools/latest/bin:${{ env.ANDROID_HOME }}/platform-tools:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:~/.local/bin
         run: |
           yes | sdkmanager --sdk_root=$ANDROID_HOME --licenses
           sdkmanager --sdk_root=$ANDROID_HOME --update
 
       - name: Install SDK packages needed for build
+        env:
+          PATH: ${{ env.ANDROID_HOME }}/cmdline-tools/latest/bin:${{ env.ANDROID_HOME }}/platform-tools:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:~/.local/bin
         run: |
           sdkmanager --sdk_root=$ANDROID_HOME "platform-tools" "platforms;android-33" "build-tools;33.0.2"
 
       - name: Run Buildozer to build APK
+        env:
+          PATH: ~/.local/bin:$PATH
         run: |
           ~/.local/bin/buildozer android debug
