--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y openjdk-11-jdk unzip wget python3-pip python3-setuptools git cython3
 
-      - name: Install Buildozer only
+      - name: Install Buildozer
         run: python3 -m pip install --user --upgrade buildozer
 
       - name: Download and install Android cmdline-tools
